# get-rich-slow

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  api.py  config_cli.py  db.py  docker-compose.yml  espn.py  kalshi_client.py  package.json  pnpm-lock.yaml  pyproject.toml  scanner.py  sst-env.d.ts  sst.config.ts  sst.pyi  start.sh  test_ws.py
.claude/: settings.json
.claude/hooks/: auto-push.sh  secret-check.sh
.github/workflows/: ci.yml
cli/: package.json
cli/src/: index.tsx
dashboard/: next.config.ts  oxfmt.json  package.json  pnpm-lock.yaml
dashboard/app/: actions.ts  globals.css  icon.tsx  layout.tsx  opengraph-image.tsx  page.tsx  twitter-image.tsx
scripts/: pre-commit-check.sh
